--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "4    Taylor Kitsch, Lynn Collins, Samantha Morton     Andrew Stanton  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,6 +875,200 @@
     "df['overview'] = df['overview'].apply(convert_overview_to_list)\n",
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>crew</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>[In, the, 22nd, century,, a, paraplegic, Marin...</td>\n",
+       "      <td>Action,Adventure,Fantasy,ScienceFiction</td>\n",
+       "      <td>cultureclash,future,spacewar,spacecolony,socie...</td>\n",
+       "      <td>SamWorthington,ZoeSaldana,SigourneyWeaver</td>\n",
+       "      <td>JamesCameron</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>285</td>\n",
+       "      <td>Pirates of the Caribbean: At World's End</td>\n",
+       "      <td>[Captain, Barbossa,, long, believed, to, be, d...</td>\n",
+       "      <td>Adventure,Fantasy,Action</td>\n",
+       "      <td>ocean,drugabuse,exoticisland,eastindiatradingc...</td>\n",
+       "      <td>JohnnyDepp,OrlandoBloom,KeiraKnightley</td>\n",
+       "      <td>GoreVerbinski</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>206647</td>\n",
+       "      <td>Spectre</td>\n",
+       "      <td>[A, cryptic, message, from, Bond’s, past, send...</td>\n",
+       "      <td>Action,Adventure,Crime</td>\n",
+       "      <td>spy,basedonnovel,secretagent,sequel,mi6,britis...</td>\n",
+       "      <td>DanielCraig,ChristophWaltz,LéaSeydoux</td>\n",
+       "      <td>SamMendes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>49026</td>\n",
+       "      <td>The Dark Knight Rises</td>\n",
+       "      <td>[Following, the, death, of, District, Attorney...</td>\n",
+       "      <td>Action,Crime,Drama,Thriller</td>\n",
+       "      <td>dccomics,crimefighter,terrorist,secretidentity...</td>\n",
+       "      <td>ChristianBale,MichaelCaine,GaryOldman</td>\n",
+       "      <td>ChristopherNolan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49529</td>\n",
+       "      <td>John Carter</td>\n",
+       "      <td>[John, Carter, is, a, war-weary,, former, mili...</td>\n",
+       "      <td>Action,Adventure,ScienceFiction</td>\n",
+       "      <td>basedonnovel,mars,medallion,spacetravel,prince...</td>\n",
+       "      <td>TaylorKitsch,LynnCollins,SamanthaMorton</td>\n",
+       "      <td>AndrewStanton</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movie_id                                     title  \\\n",
+       "0     19995                                    Avatar   \n",
+       "1       285  Pirates of the Caribbean: At World's End   \n",
+       "2    206647                                   Spectre   \n",
+       "3     49026                     The Dark Knight Rises   \n",
+       "4     49529                               John Carter   \n",
+       "\n",
+       "                                            overview  \\\n",
+       "0  [In, the, 22nd, century,, a, paraplegic, Marin...   \n",
+       "1  [Captain, Barbossa,, long, believed, to, be, d...   \n",
+       "2  [A, cryptic, message, from, Bond’s, past, send...   \n",
+       "3  [Following, the, death, of, District, Attorney...   \n",
+       "4  [John, Carter, is, a, war-weary,, former, mili...   \n",
+       "\n",
+       "                                    genres  \\\n",
+       "0  Action,Adventure,Fantasy,ScienceFiction   \n",
+       "1                 Adventure,Fantasy,Action   \n",
+       "2                   Action,Adventure,Crime   \n",
+       "3              Action,Crime,Drama,Thriller   \n",
+       "4          Action,Adventure,ScienceFiction   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  cultureclash,future,spacewar,spacecolony,socie...   \n",
+       "1  ocean,drugabuse,exoticisland,eastindiatradingc...   \n",
+       "2  spy,basedonnovel,secretagent,sequel,mi6,britis...   \n",
+       "3  dccomics,crimefighter,terrorist,secretidentity...   \n",
+       "4  basedonnovel,mars,medallion,spacetravel,prince...   \n",
+       "\n",
+       "                                        cast              crew  \n",
+       "0  SamWorthington,ZoeSaldana,SigourneyWeaver      JamesCameron  \n",
+       "1     JohnnyDepp,OrlandoBloom,KeiraKnightley     GoreVerbinski  \n",
+       "2      DanielCraig,ChristophWaltz,LéaSeydoux         SamMendes  \n",
+       "3      ChristianBale,MichaelCaine,GaryOldman  ChristopherNolan  \n",
+       "4    TaylorKitsch,LynnCollins,SamanthaMorton     AndrewStanton  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Función para quitar los espacios en los elementos de una lista o cadenas de texto\n",
+    "def remove_spaces(value):\n",
+    "    if isinstance(value, list):  # Si el valor es una lista\n",
+    "        return [item.replace(' ', '') for item in value]  # Elimina los espacios de cada elemento\n",
+    "    elif isinstance(value, str):  # Si el valor es una cadena de texto\n",
+    "        return value.replace(' ', '')  # Elimina los espacios\n",
+    "    else:\n",
+    "        return value  # Devuelve el valor sin cambios si es otro tipo\n",
+    "\n",
+    "# Aplicar la función a las columnas correspondientes\n",
+    "df['genres'] = df['genres'].apply(remove_spaces)\n",
+    "df['cast'] = df['cast'].apply(remove_spaces)\n",
+    "df['crew'] = df['crew'].apply(remove_spaces)\n",
+    "df['keywords'] = df['keywords'].apply(remove_spaces)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[In the 22nd century a paraplegic Marine is dispatched to the moon Pandora on a unique mission but becomes torn between following orders and protecting an alien civilization.] ActionAdventureFantasyScienceFiction cultureclashfuturespacewarspacecolonysocietyspacetravelfuturisticromancespacealientribealienplanetcgimarinesoldierbattleloveaffairantiwarpowerrelationsmindandsoul3d SamWorthingtonZoeSaldanaSigourneyWeaver JamesCameron'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Función para limpiar espacios y comillas extras\n",
+    "def clean_string(value):\n",
+    "    # Eliminar espacios extras y comillas no deseadas\n",
+    "    return ' '.join(str(value).replace(\"'\", \"\").split())\n",
+    "\n",
+    "# Función para combinar todas las columnas en una sola cadena\n",
+    "def combine_columns(row):\n",
+    "    # Limpiar y combinar los valores de todas las columnas\n",
+    "    return ' '.join([\n",
+    "        clean_string(row['overview']),\n",
+    "        clean_string(row['genres']),\n",
+    "        clean_string(row['keywords']),\n",
+    "        clean_string(row['cast']),\n",
+    "        clean_string(row['crew'])\n",
+    "    ])\n",
+    "\n",
+    "# Crear la nueva columna 'tags' combinando las columnas procesadas\n",
+    "df['tags'] = df.apply(combine_columns, axis=1)\n",
+    "\n",
+    "# Reemplazar comas por espacios en blanco en la columna 'tags'\n",
+    "df['tags'] = df['tags'].str.replace(',', '')\n",
+    "\n",
+    "# Mostrar el primer valor de la columna 'tags' para verificar\n",
+    "df[\"tags\"][0]"
    ]
   }
  ],
