Paso 4 en proceso

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "4    Taylor Kitsch, Lynn Collins, Samantha Morton     Andrew Stanton  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
        "4    TaylorKitsch,LynnCollins,SamanthaMorton     AndrewStanton  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
        "'[In the 22nd century a paraplegic Marine is dispatched to the moon Pandora on a unique mission but becomes torn between following orders and protecting an alien civilization.] ActionAdventureFantasyScienceFiction cultureclashfuturespacewarspacecolonysocietyspacetravelfuturisticromancespacealientribealienplanetcgimarinesoldierbattleloveaffairantiwarpowerrelationsmindandsoul3d SamWorthingtonZoeSaldanaSigourneyWeaver JamesCameron'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,8 +1068,128 @@
     "df['tags'] = df['tags'].str.replace(',', '')\n",
     "\n",
     "# Mostrar el primer valor de la columna 'tags' para verificar\n",
-    "df[\"tags\"][0]"
+    "df[\"tags\"][0]\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Paso 4:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vectorizar:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>avatar</td>\n",
+       "      <td>[inthe22ndcenturyaparaplegicmarineisdispatched...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>285</td>\n",
+       "      <td>piratesofthecaribbean:atworld'send</td>\n",
+       "      <td>[captainbarbossalongbelievedtobedeadhascomebac...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>206647</td>\n",
+       "      <td>spectre</td>\n",
+       "      <td>[acrypticmessagefrombond’spastsendshimonatrail...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>49026</td>\n",
+       "      <td>thedarkknightrises</td>\n",
+       "      <td>[followingthedeathofdistrictattorneyharveydent...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49529</td>\n",
+       "      <td>johncarter</td>\n",
+       "      <td>[johncarterisawar-wearyformermilitarycaptain\"w...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movie_id                               title  \\\n",
+       "0     19995                              avatar   \n",
+       "1       285  piratesofthecaribbean:atworld'send   \n",
+       "2    206647                             spectre   \n",
+       "3     49026                  thedarkknightrises   \n",
+       "4     49529                          johncarter   \n",
+       "\n",
+       "                                                tags  \n",
+       "0  [inthe22ndcenturyaparaplegicmarineisdispatched...  \n",
+       "1  [captainbarbossalongbelievedtobedeadhascomebac...  \n",
+       "2  [acrypticmessagefrombond’spastsendshimonatrail...  \n",
+       "3  [followingthedeathofdistrictattorneyharveydent...  \n",
+       "4  [johncarterisawar-wearyformermilitarycaptain\"w...  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final=df.loc[:,[\"movie_id\",\"title\",\"tags\"]]\n",
+    "\n",
+    "#Convertir todo a minúscula y quitar espacios:\n",
+    "\n",
+    "df_final[\"title\"] = df_final[\"title\"].str.strip().str.lower()\n",
+    "df_final['title'] = df_final['title'].str.replace(\" \", \"\")\n",
+    "df_final[\"tags\"] = df_final[\"tags\"].str.strip().str.lower()\n",
+    "df_final['tags'] = df_final['tags'].str.replace(\" \", \"\")\n",
+    "df_final.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
