--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -1215,33 +1215,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def recommend(movie):\n",
     "    movie_index = df[df[\"title\"] == movie].index[0]\n",
-    "    distances = similarity[movie_index]\n",
-    "    movie_list = sorted(list(enumerate(distances)), reverse = True , key = lambda x: x[1])[1:6]\n",
+    "    distances,indices = model.kneighbors(df_vectorized[movie_index])\n",
+    "    movie_list = [(df[\"title\"][i],distances[0][j]) for j,i in enumerate(indices[0])]\n",
+    "    #sorted(list(enumerate(distances)), reverse = True , key = lambda x: x[1])[1:6]\n",
     "    \n",
-    "    for i in movie_list:\n",
-    "        print(df.iloc[i[0]].title)\n"
+    "    for i,distances in movie_list:\n",
+    "        print(\"movie:{}\".format(i))\n",
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batman\n",
-      "The Heat\n",
-      "Avatar\n",
-      "Pirates of the Caribbean: At World's End\n",
-      "Spectre\n"
+      "movie:The Dark Knight Rises\n",
+      "movie:Batman\n",
+      "movie:The Heat\n",
+      "movie:Awake\n",
+      "movie:The I Inside\n",
+      "movie:Crocodile Dundee\n"
      ]
     }
    ],
@@ -1251,18 +1254,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Lake House\n",
-      "Forget Me Not\n",
-      "War\n",
-      "Poltergeist\n",
-      "The Legend of Zorro\n"
+      "movie:Divergent\n",
+      "movie:The Lake House\n",
+      "movie:Forget Me Not\n",
+      "movie:War\n",
+      "movie:Poltergeist\n",
+      "movie:The Legend of Zorro\n"
      ]
     }
    ],
