Para probar el render

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
        "4    Taylor Kitsch, Lynn Collins, Samantha Morton     Andrew Stanton  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "4    TaylorKitsch,LynnCollins,SamanthaMorton     AndrewStanton  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
        "'[In the 22nd century a paraplegic Marine is dispatched to the moon Pandora on a unique mission but becomes torn between following orders and protecting an alien civilization.] ActionAdventureFantasyScienceFiction cultureclashfuturespacewarspacecolonysocietyspacetravelfuturisticromancespacealientribealienplanetcgimarinesoldierbattleloveaffairantiwarpowerrelationsmindandsoul3d SamWorthingtonZoeSaldanaSigourneyWeaver JamesCameron'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
        "NearestNeighbors(metric='cosine', n_neighbors=6)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1285,32 +1285,36 @@
      "output_type": "stream",
      "text": [
       "Las 5 películas recomendadas para Drive Angry son:\n",
-      "Quinceañera\n",
-      "Miss Congeniality\n",
-      "The Pledge\n",
-      "Troop Beverly Hills\n",
-      "American Beauty\n",
+      "movie:Drive Angry\n",
+      "movie:Quinceañera\n",
+      "movie:Miss Congeniality\n",
+      "movie:The Pledge\n",
+      "movie:Troop Beverly Hills\n",
+      "movie:American Beauty\n",
       "\n",
       "Las 5 películas recomendadas para Anywhere But Here son:\n",
-      "You Can Count on Me\n",
-      "Straight A's\n",
-      "Dolphin Tale 2\n",
-      "The Kids Are All Right\n",
-      "Choke\n",
+      "movie:Anywhere But Here\n",
+      "movie:You Can Count on Me\n",
+      "movie:Straight A's\n",
+      "movie:Choke\n",
+      "movie:The Kids Are All Right\n",
+      "movie:Dolphin Tale 2\n",
       "\n",
       "Las 5 películas recomendadas para Insidious: Chapter 3 son:\n",
-      "Avatar\n",
-      "Pirates of the Caribbean: At World's End\n",
-      "Spectre\n",
-      "The Dark Knight Rises\n",
-      "John Carter\n",
+      "movie:Insidious: Chapter 3\n",
+      "movie:Crocodile Dundee\n",
+      "movie:The I Inside\n",
+      "movie:Veronika Decides to Die\n",
+      "movie:Red Riding: In the Year of Our Lord 1974\n",
+      "movie:Ultramarines: A Warhammer 40,000 Movie\n",
       "\n",
       "Las 5 películas recomendadas para Maurice son:\n",
-      "Avatar\n",
-      "Pirates of the Caribbean: At World's End\n",
-      "Spectre\n",
-      "The Dark Knight Rises\n",
-      "John Carter\n",
+      "movie:Maurice\n",
+      "movie:Ultramarines: A Warhammer 40,000 Movie\n",
+      "movie:Crocodile Dundee\n",
+      "movie:The Girl on the Train\n",
+      "movie:The I Inside\n",
+      "movie:Beneath Hill 60\n",
       "\n"
      ]
     }
@@ -1332,11 +1336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dump(similarity, open(\"KNN_recomendations_movies_similarity.sav\", \"wb\"))"
+    "dump(model, open(\"KNN_recomendations_movies.sav\", \"wb\"))"
    ]
   }
  ],
